  * Patches by Marc Haber (thanks!):
    - Streamline calls of bootparams-functions, single quotes everywhere.
    - Don't print the "Debs, config, scripts will be read from the live
      image directly." message if no debs, config or scripts option
      was given on the command line.
    - Drop $CMDLINE from grml-autoconfig; it's initialized from within
      autoconfig.functions.
  * Set $CMDLINE in $BOOTDEBUG part only if it's not available yet.
  * Code cleanup:
    - drop stringinstring(), stringinfile() and checkgrmlusb()
    - rework getbootparam(), checkvalue() and checkbootparam() - now
      we handle bootoptions in /proc/cmdline correctly as whole words
      and support matching begin and end of line as well.

 -- Michael Prokop <mika@grml.org>  Tue, 11 Aug 2009 13:03:38 +0200

grml-autoconfig (0.8.24) unstable; urgency=low

  * Check for space after bootoption 'fast' so we do not conflict
    with new kernel bootoption fastboot.
  * New bootoption 'nostartx': if using startx as default bootoption
    the bootoption 'nostartx' disables automatic startup of X.
  * Apply patch by Marc Haber regarding re-work of debs, config
    and scripts handling (thanks a lot!):
    - debs, config and scripts are always searched and read from the
      same place ($dcs-dir). Which place this is varies, depending on
      GRMLCFG, noautoconfig and myconfig.
    - debs are searched in $dcs-dir/debs. If debs=foo is given, foo is
      taken as a shell wildcard for the debs being installed, paths are
      allowed and relative to $dcs-dir.
    - config archives (config.tbz) are searched directly in $dcs-dir. If
      config=foo is given and foo is a file, that file is unpacked and its
      content taken as configuration archive. If config=foo is given and foo
      is a directory, the contents of the directory tree is copied over the
      live CD configuration. paths are allowed and relative to $dcs-dir