@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Michael Prokop <mika@grml.org>
 Build-Depends: debhelper (>= 5)
 Standards-Version: 3.8.2
+Build-Depends-Indep: asciidoc, docbook-xsl, xsltproc
 Homepage: http://git.grml.org/?p=grml-autoconfig.git
 Vcs-git: git://git.grml.org/grml-autoconfig.git
 Vcs-Browser: http://git.grml.org/?p=grml-autoconfig.git
