@@ -9,14 +9,17 @@ grml-autoconfig (0.8.25) UNRELEASED; urgency=low
       was given on the command line.
     - Drop $CMDLINE from grml-autoconfig; it's initialized from within
       autoconfig.functions.
+    - Moved documentation from grml-saveconfig (now AKA grml-autoconfig.txt)
+      and adjusted for new DSC feature.
   * Set $CMDLINE in $BOOTDEBUG part only if it's not available yet.
   * Code cleanup:
     - drop stringinstring(), stringinfile() and checkgrmlusb()
     - rework getbootparam(), checkvalue() and checkbootparam() - now
       we handle bootoptions in /proc/cmdline correctly as whole words
       and support matching begin and end of line as well.
+  * Build-Depends-Indep on asciidoc, docbook-xsl and xsltproc.
 
- -- Michael Prokop <mika@grml.org>  Tue, 11 Aug 2009 13:03:38 +0200
+ -- Michael Prokop <mika@grml.org>  Thu, 13 Aug 2009 01:54:52 +0200
 
 grml-autoconfig (0.8.24) unstable; urgency=low
 
